# business-homeassistant-test

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  TASK_SUMMARY.md  configuration.yaml  docker-compose.yml  justfile  onboarding.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: README.md  all-tests.yml  e2e-tests.yml
docs/: build-system-migration-summary.md  how-fast-integration-works.md  integration-test-status.md  integration-testing.md  module-system-migration.md  parallel-testing.md  performance-optimization.md  prd-pre-commit-checks.md  pre-commit-recommendations.md  requirements-restructure.md  test-organization.md  testing-strategy.md  uv-migration.md
docs/prd/: dependency-updates.md
just/: common.just  dev.just  docker.just  python.just  quality.just  test.just
just/test/: e2e.just  integration.just  ui.just  unit.just
scripts/: benchmark_e2e.py  check_automation_logic.py  fix_reports_permissions.sh  generate-just-files.py  onboarding-standalone-improvement.py  run_tests.py  setup-pre-commit.sh  setup_test_auth.py  switch_auth_mode.sh  validate_automations.py  validate_ha_mocks.py  validate_test_structure.py
terraform/: README.md  main.tf
tests/: README.md  __init__.py  common.py  conftest.py  requirements.txt
tests/docker/: Dockerfile.test  docker-compose.yml
tests/e2e/: README.md  conftest.py  requirements.txt  test_basic_e2e.py
tests/examples/: __init__.py  validation_example.py
tests/helpers/: __init__.py  auth.py  automation_logic.py  automation_test_base.py  (+3 more)
(+50 files in other folders)
